[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "General purpose Python scripts"
authors = ["Felippe A."]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.49"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.3"
ruff-lsp = "^0.0.58"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
